# mindX

./: .cursorignore  .env.new  .env.sample  .gitignore  .gitmodules  .plan.md  =0.23.0  AION.sh  CHANGELOG.md  CLAUDE.md  INDEX.md  INSTALL.md  Makefile  README.md  SECURITY.md  SUMMARY.md  __init__.py  augmentic.py  augmentic_simple.py  manage_credentials.py  manage_custody.py  mindX.sh  mindX.sh.backup  mock_api_server.py  ollama_install.sh  pyproject.toml  requirements.lock.txt  requirements.txt  run_mindx_web.sh  start_autonomous_evolution.py  test_agint_changes.py  test_api.py  test_bdi_reasoning.py  test_simple_coder.py
AgenticPlace/: README.md  SubstrateComponents.tsx  ceo_agent.prompt  cfo_agent.prompt  executive_board.yaml  index.css  index.css.backup  index.tsx  index.tsx.backup  loader.js  metadata.json  mindx-context.ts  package-lock.json  package.json  persona.json  persona.ts  vite.config.ts
agents/: Chronos.agent  DeltaVerse.agent  Kairos.agent  agent.schema.json  aion_agent.py  analyzer.py  author_agent.py  automindx_agent.py  avatar_agent.py  backup_agent.py  base_gen_agent.py  benchmark.py  index.md  (+52 more)
daio/contracts/THOT/python/: README.md  pyproject.toml  validate.py
daio/contracts/THOT/python/thot/: __init__.py  builder.py  matryoshka.py  merkle.py  thot8_cpu.py
openagents/bankoneth/: .gitignore  BANKONETH.md  LICENSE  README.md  foundry.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
openagents/bankoneth/contracts/: BankonAgenticPlaceHook.md  BankonAgenticPlaceHook.sol  BankonDomainHosting.md  BankonDomainHosting.sol  BankonEthRegistrar.md  BankonEthRegistrar.sol  BankonInftAdapter.md  BankonInftAdapter.sol  BankonOffchainRegistrar.sol  BankonOffchainResolver.sol  BankonPaymentRouter.md  BankonPriceOracle.md  BankonReputationGate.md  BankonReputationGate.sol  BankonSubnameRegistrar.md  BankonSubnameRegistrar.sol  BankonSubnameResolver.md  BankonSubnameResolver.sol  BankonSubnameResolverV2.md  BankonSubnameResolverV2.sol  BankonX402Attestor.md  BankonX402Attestor.sol
openagents/bankoneth/contracts/identity/: AgentRegistry.md  AgentRegistry.sol  BankonAuthGate.sol  SoulBadger.md  SoulBadger.sol
openagents/bankoneth/contracts/identity/interfaces/: IAgenticPlace.md
openagents/bankoneth/contracts/inft/: iNFT_7857.md  iNFT_7857.sol
openagents/bankoneth/contracts/inft/interfaces/: ITHOTCommitmentRegistry.md  ITHOTCommitmentRegistry.sol
openagents/bankoneth/contracts/interfaces/: IBankon.md  IBankonExtensions.md  IBankonExtensions.sol  IReverseRegistrar.sol
openagents/bankoneth/contracts/x402/: X402Receipt.md  X402Receipt.sol
openagents/bankoneth/docs/: ADDR_REFERENCE.md  ARCHITECTURE.md  AUDIT.md  CONTRACT_NAMING_AUDIT.md  DAIO_HANDOFF.md  DEPLOYMENT.md  ENSAUTH_GATING.md  ENSIP_COVERAGE.md  FUSES.md  INTEGRATIONS.md  RECORD_EDITING.md  RENEWAL.md  REVERSE_REGISTRATION.md  SEPOLIA_REHEARSAL.md  TRANSFER.md  V2_READINESS.md
openagents/bankoneth/docs/specs/: BANKON ENS Subname Registrar_ ERC-7857 iNFT and ERC-6551 TBA Integration.md  BANKON ENS Subname Registrar_ Production Architecture for bankon.eth.md  CCIP_READ_REGISTRAR.md  README.md
openagents/bankoneth/examples/claim-alice/: README.md
openagents/bankoneth/examples/local-anvil/: run.sh
openagents/bankoneth/integrations/mindx/: README.md  __init__.py  tool.py
openagents/bankoneth/integrations/parsec/: README.md
openagents/bankoneth/script/: DeployEthereum.s.md  DeployEthereum.s.sol  DeployZeroG.s.md  DeployZeroG.s.sol  SetForwardNames.s.sol  SetPrimaryNames.s.sol  Verify.s.md  Verify.s.sol  VerifyContractNames.s.sol  WireCrossChain.s.md  WireCrossChain.s.sol
openagents/bankoneth/services/offchain-gateway/: README.md  package.json  tsconfig.json
openagents/bankoneth/services/offchain-gateway/src/: index.ts
openagents/bankoneth/test/: BankonAgenticPlaceHook.t.md  BankonAgenticPlaceHook.t.sol  BankonAuthGate.t.sol  BankonDomainHosting.t.md  BankonDomainHosting.t.sol  BankonEndToEnd.t.md  BankonEndToEnd.t.sol  BankonEthRegistrar.t.md  BankonEthRegistrar.t.sol  BankonInftAdapter.t.md  BankonInftAdapter.t.sol  BankonOffchainRegistrar.t.sol  BankonOffchainResolver.t.sol  BankonSubnameRegistrar.t.md  BankonSubnameRegistrar.t.sol  BankonSubnameResolver.t.sol  BankonSubnameResolverV2.t.sol  BankonX402Attestor.t.md  BankonX402Attestor.t.sol  ContractNaming.t.sol
openagents/bankoneth/test/fork/: BankonEnsFork.t.sol
openagents/bankoneth/test/helpers/: X402Sig.sol
openagents/bankoneth/test/mocks/: MockEthRegistrarController.md  MockEthRegistrarController.sol  MockIdentityRegistry.md  MockIdentityRegistry.sol  MockNameWrapper.md  MockNameWrapper.sol  MockResolver.md  MockResolver.sol  MockReverseRegistrar.sol
openagents/conclave/: .gitignore  BUILD_STATUS.md  CONCLAVE.md  LICENSE  README.md  SUBMISSION.md  node-config.json  pyproject.toml
openagents/conclave/conclave/: __init__.py  agent.py  algorand.py  axl_client.py  chain.py  crypto.py  messages.py  protocol.py  roles.py  session.py
openagents/conclave/contracts/: foundry.toml  lcov.info
openagents/conclave/contracts/script/: Deploy.s.sol
openagents/conclave/contracts/src/: Censura.sol  Conclave.sol  ConclaveBond.sol  Tessera.sol
openagents/conclave/contracts/src/interfaces/: ICensura.sol  IConclave.sol  IConclaveBond.sol  ITessera.sol
openagents/conclave/contracts/test/: Conclave.t.sol  ConclaveBond.t.sol
openagents/conclave/demos/: agenda-acme.md  leak.py  slash.py
openagents/conclave/docs/: ARCHITECTURE.md  EVALUATION.md  THREAT_MODEL.md
openagents/conclave/examples/: camera_view.html  ceo_node.py  run_local_8node.sh  soldier_node.py
openagents/conclave/integrations/: __init__.py  mindx_boardroom_adapter.py
openagents/conclave/tests/: test_protocol.py
openagents/dapp_kit/templates/lit-vite/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
openagents/dapp_kit/templates/lit-vite/src-tauri/capabilities/: default.json
openagents/dapp_kit/templates/lit-vite/src-tauri/src/: lib.rs  main.rs
openagents/dapp_kit/templates/lit-vite/src-tauri/src/commands/: keychain.rs  mod.rs
(+56472 files in other folders)
